[package]
name = "alphanumeric"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.3"
arrayref = "0.3"
bincode = "1.3"
byteorder = "1.4"
blake3 = "1.4.0"
sha2 = "0.10"
rayon = "1.5.3"
chrono = "0.4"
dashmap = "6.1.0"
num_cpus = "1.16"
num-traits = "0.2"
num-bigint = "0.4.6"
ipnet = "2.3.1"
rand_core = "0.6.4"
rand = "0.8"
thiserror = "1.0"
socket2 = "0.5.8"
uuid = { version = "1.6.1", features = ["v4", "rng"] }
get_if_addrs = "0.5.3"
ring = "0.16"
base64 = "0.13"
indicatif = "0.16"
termcolor = "1.1"
log = "0.4"
hex = "0.4"
crossbeam-channel = "0.5.6"
parking_lot = "0.12.1"
lru = "0.8"
bytes = "1.3"
reed-solomon-erasure = "6.0.0"
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3.5"
aes-gcm = "0.10"
inquire = "0.7.0"
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = "0.15"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
libp2p = { version = "0.51.4", features = ["mdns", "dns", "tcp", "noise", "yamux", "identify", "kad"] }
if-addrs = "0.10"
lazy_static = "1.4"
serde_json = "1.0"
async-trait = "0.1.74"
sled = "0.34.0"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
zip = "0.6"
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
axum = "0.6"
ctrlc = "3.4"
igd-next = "0.15"
sysinfo = "0.30"

[build-dependencies]
bindgen = "0.64"
winres = "0.1.12"

# NOTE:
# Windows Defender ML detections are often triggered by small, stripped, unsigned binaries
# that do heavy filesystem + networking (like bootstrap publish). Keep symbols and avoid
# aggressive LTO/stripping in release builds until the binary is code-signed.
[profile.release]
debug = 1
strip = "none"
lto = false
panic = "unwind"
