[package]
name = "alphanumeric"
version = "7.3.8"
edition = "2021"

[dependencies]
argon2 = "0.5"
arrayref = "0.3"
byteorder = "1.4"
blake3 = "1.4.0"
sha2 = "0.10"
rayon = "1.5.3"
chrono = "0.4"
dashmap = "6.1.0"
num_cpus = "1.16"
num-traits = "0.2"
num-bigint = "0.4.6"
nix = { version = "0.30.1", features = ["process", "signal"] }
ipnet = "2.3.1"
rand_core = "0.6.4"
rand = "0.8"
thiserror = "1.0"
socket2 = "0.5.8"
uuid = { version = "1.6.1", features = ["v4", "rng"] }
get_if_addrs = "0.5.3"
ring = "0.17.14"
indicatif = "0.18"
termcolor = "1.1"
log = "0.4"
hex = "0.4"
crossbeam-channel = "0.5.15"
parking_lot = "0.12.1"
lru = "0.8"
reed-solomon-erasure = "6.0.0"
ml-dsa = "0.1.1"
aes-gcm = "0.10"
inquire = "0.7.0"
tokio = { version = "1.52", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3.1"
libp2p-core = "0.43.2"
libp2p-identity = { version = "0.2.14", features = ["ed25519", "peerid", "rand"] }
libp2p-kad = "0.48.0"
libp2p-noise = "0.46.1"
libp2p-swarm = { version = "0.47.1", features = ["macros", "tokio"] }
libp2p-tcp = { version = "0.44.1", features = ["tokio"] }
libp2p-yamux = "0.47.0"
if-addrs = "0.10"
lazy_static = "1.4"
serde_json = "1.0"
async-trait = "0.1.74"
sled = "0.34.0"
env_logger = "0.10"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
zip = "6"
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
axum = "0.6"
ctrlc = "3.4"
igd-next = "0.15"
sysinfo = "0.30"

[build-dependencies]
bindgen = "0.64"
winres = "0.1.12"

[features]
# Keep default binaries lean to reduce AV/EDR false positives.
default = []
# Enables DB snapshot publishing (zip+upload+sign) and the `push` command.
bootstrap_publisher = []
# Reserved feature flag used by some libp2p/TCP-specific code paths.
tcp = []

# NOTE:
# Windows Defender ML detections are often triggered by small, stripped, unsigned binaries
# that do heavy filesystem + networking (like bootstrap publish). Keep symbols and avoid
# aggressive LTO/stripping in release builds until the binary is code-signed.
[profile.release]
debug = 1
strip = "none"
lto = false
panic = "unwind"
